[metadata]
name = tox-report
url = https://github.com/tox-dev/tox-report
project_urls =
    Bug Tracker = https://github.com/tox-dev/tox-report/issues
    Release Management = https://github.com/tox-dev/tox-report/releases
    CI = https://github.com/tox-dev/tox-report/actions
    Source Code = https://github.com/tox-dev/tox-report
description = Produce extra reports of tox runs HTML
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: tox
    License :: OSI Approved :: MIT License

    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
keywords =
    html
    tox
    tox-plugin

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    tox >= 3.9
    rich >= 6.0

[options.entry_points]
tox =
  report = tox_report.hooks

[options.packages.find]
where = src

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D
# 88 is official black default:
max-line-length = 88

[coverage:run]
parallel = True
plugins = covdefaults

[coverage:report]
omit =
  .tox/*/lib/python*/site-packages/*
include = src/*
# fail under this percent
fail_under = 54.0

[coverage:paths]
source =
  src

[coverage:covdefaults]
subtract_omit = */.tox/*
